Fixed image cropping in gallery by setting object-position to top

--- a/styles.css
+++ b/styles.css
@@ -1206,6 +1206,7 @@ ul {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: top;
 }
 
 .item-overlay {
